<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">gardN-android</string>
    <string name="action_settings">Settings</string>
    <string name="please_wait_progress">Please wait…</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_confirmation">Confirm Password</string>
    <string name="prompt_name">Name</string>
    <string name="action_sign_in_register"><b>Sign in</b> or register</string>
    <string name="action_sign_in_short">Sign In</string>
    <string name="action_create_user_short">Create User</string>
    <string name="toggle_have_account">Have an Account?</string>
    <string name="toggle_need_account">Need an Account?</string>
    <string name="action_forgot_password">Recover lost password</string>
    <string name="login_progress_signing_in">Signing in…</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_confirmation">These passwords don\'t match</string>

    <!-- Actions -->
    <string name="action_logout">Log out</string>
    <string name="action_new_event">New Event</string>
    <string name="action_invite">Invite</string>
    <string name="action_friends">Friends</string>
    <string name="action_friend_all">Friend All</string>
    <string name="action_rename">Rename</string>
    <string name="action_delete">Delete</string>

    <!-- Error Messages -->
    <string name="error_network">Can\'t connect to network</string>
    <string name="error_not_int">Value must be an integer</string>
    <string name="error_min_max">Min value must be less than max value</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_description_too_long">Description must be less than 255 character</string>

    <!-- Routes -->
    <string name="conn">https://www.room-mate.com</string>
    <string name="sign_in">/users/sign_in.json</string>
    <string name="sign_up">/users.json</string>
    <string name="sign_out">/users/sign_out</string>
    <string name="title_activity_community_garden">CommunityGardenActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_search_fields">SearchFieldsActivity</string>
<<<<<<< HEAD
    <string name="posts_index">/posts.json</string>
=======
    <string name="title_activity_post_page">PostPageActivity</string>
    <string name="title_activity_post_results">PostResultsActivity</string>
    <string name="title_activity_new_post">NewPostActivity</string>
    <string name="title_activity_branch_out">BranchOutActivity</string>
>>>>>>> 1390b42a4720fc55da31c28f6fdaab8e51476db0

</resources>
